--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,13 @@ body {
     color: #fff;
 }
 
+.calculator__input::placeholder {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    color: #fff;
+}
+
 .calculator__btn-wrapper {
     width: 500px;
     padding: 20px;
@@ -66,6 +73,14 @@ body {
     font-weight: 700;
     font-size: 36px;
     color: hsl(224, 28%, 35%);
+    cursor: pointer;
+    transition: all 200ms linear;
+}
+
+.calculator__btn:hover {
+    color: hsl(30, 25%, 89%);
+    background-color: hsl(224, 28%, 35%);
+    box-shadow: 0 5px hsl(225, 21%, 49%);
 }
 
 .del-btn {
@@ -90,6 +105,11 @@ body {
     background-color: hsl(6, 63%, 50%);
     box-shadow: 0 5px hsl(6, 70%, 34%);
     color: #fff;
+}
+
+.equal-btn:hover {
+    background-color: hsl(6, 70%, 34%);
+    box-shadow: 0 5px hsl(6, 63%, 50%);
 }
 
 
