--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,8 @@ body {
 
 .calculator__input::placeholder {
     font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 36px;
+    font-weight: 700 !important;
+    font-size: 36px !important;
     color: #fff;
 }
 
@@ -74,13 +74,18 @@ body {
     font-size: 36px;
     color: hsl(224, 28%, 35%);
     cursor: pointer;
-    transition: all 200ms linear;
+    transition: all 250ms linear;
 }
 
 .calculator__btn:hover {
     color: hsl(30, 25%, 89%);
     background-color: hsl(224, 28%, 35%);
     box-shadow: 0 5px hsl(225, 21%, 49%);
+}
+
+.calculator__btn:active {
+    transform: translateY(5px);
+    box-shadow: 0 4px hsl(225, 21%, 49%);
 }
 
 .del-btn {
