--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ body {
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
+    overflow: hidden;
 }
 
 .calculator__input {
@@ -134,11 +135,9 @@ body {
 
 
 @media screen and (min-width: 360px) and (max-width: 480px) {
-    .calculator__input {
+    .calculator__content {
         width: 360px;
-        padding: 10px;
-        margin-bottom: 10px;
-        font-size: 26px;
+        height: 130px;
     }
 
     .calculator__btn-wrapper {
